changes for mask predictions

--- a/examples/data2vec/config/v2/base_audio_only_task.yaml
+++ b/examples/data2vec/config/v2/base_audio_only_task.yaml
@@ -21,6 +21,7 @@ task:
   max_sample_size: 320000
   min_sample_size: 32000
   normalize: true
+  precompute_mask_config: {}
 
 dataset:
   num_workers: 6
@@ -31,7 +32,7 @@ dataset:
   disable_validation: true
 
 distributed_training:
-  distributed_world_size: 4
+  distributed_world_size: 1
   ddp_backend: legacy_ddp
 
 criterion:
@@ -45,9 +46,10 @@ criterion:
     - masked_pct
 
 optimization:
-  max_update: 400000
+  #max_update: 400000
+  max_epoch: 300
   lr: [0.00075]
-  #max_epoch: 300
+  debug_param_names: true
 
 optimizer:
   _name: adam
